@@ -1,7 +1,6 @@
 package goorm.ddok.evaluation.service;
 
 import goorm.ddok.badge.service.BadgeService;
-import goorm.ddok.evaluation.domain.EvaluationStatus;
 import goorm.ddok.evaluation.domain.TeamEvaluation;
 import goorm.ddok.evaluation.domain.TeamEvaluationScore;
 import goorm.ddok.evaluation.dto.EvaluationMemberItem;
@@ -10,10 +9,10 @@ import goorm.ddok.evaluation.dto.SimpleUserDto;
 import goorm.ddok.evaluation.dto.response.EvaluationModalResponse;
 import goorm.ddok.evaluation.repository.TeamEvaluationRepository;
 import goorm.ddok.evaluation.repository.TeamEvaluationScoreRepository;
-import goorm.ddok.global.dto.AbandonBadgeDto;
-import goorm.ddok.global.dto.BadgeDto;
 import goorm.ddok.global.exception.ErrorCode;
 import goorm.ddok.global.exception.GlobalException;
+import goorm.ddok.reputation.domain.UserReputation;
+import goorm.ddok.reputation.repository.UserReputationRepository;
 import goorm.ddok.team.domain.Team;
 import goorm.ddok.team.domain.TeamMember;
 import goorm.ddok.team.domain.TeamMemberRole;
@@ -23,6 +22,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -35,35 +35,32 @@ public class EvaluationQueryService {
     private final TeamMemberRepository teamMemberRepository;
     private final TeamEvaluationRepository evaluationRepository;
     private final TeamEvaluationScoreRepository scoreRepository;
-    private final BadgeService badgeService; // ✅ 배지 서비스 주입
+    private final BadgeService badgeService;
+
+    // ✅ 온도 조회용
+    private final UserReputationRepository userReputationRepository;
 
     public EvaluationModalResponse getModal(Long teamId, Long meUserId) {
-        // 팀 확인
         Team team = teamRepository.findById(teamId)
                 .orElseThrow(() -> new GlobalException(ErrorCode.NOT_FOUND));
 
-        // 최신 라운드
         TeamEvaluation eval = evaluationRepository.findTopByTeam_IdOrderByIdDesc(teamId)
                 .orElseThrow(() -> new GlobalException(ErrorCode.EVALUATION_NOT_FOUND));
 
-        // 팀원 조회 (자기 자신 제외)
-        List<TeamMember> members = teamMemberRepository.findByTeamId(teamId).stream()
-                .filter(m -> !Objects.equals(m.getUser().getId(), meUserId))
-                .toList();
+        List<TeamMember> members = teamMemberRepository.findByTeamId(teamId);
 
         // 내가 준 점수들(타겟별 그룹)
         var given = scoreRepository.findByEvaluationIdAndEvaluatorUserId(eval.getId(), meUserId);
         Map<Long, List<TeamEvaluationScore>> givenByTarget =
                 given.stream().collect(Collectors.groupingBy(TeamEvaluationScore::getTargetUserId));
 
-        // 멤버 블록 생성
+        // 멤버 블록
         List<EvaluationMemberItem> memberItems = members.stream()
                 .map(m -> {
                     Long targetId = m.getUser().getId();
                     boolean evaluated = givenByTarget.containsKey(targetId);
                     boolean isMine = Objects.equals(targetId, meUserId);
 
-                    // 내가 해당 멤버에게 준 점수 목록
                     List<ScoreItem> myScores = givenByTarget
                             .getOrDefault(targetId, List.of())
                             .stream()
@@ -71,46 +68,32 @@ public class EvaluationQueryService {
                                     .itemId(s.getItemId())
                                     .score(s.getScore())
                                     .build())
-                            .collect(Collectors.toList());
+                            .toList();
 
-                    // ✅ 배지 조회
-                    // - 착한 배지들 중 가장 높은 티어 1개를 mainBadge로 선택
-                    BadgeDto mainBadge = null;
-                    var goodBadges = badgeService.getGoodBadges(m.getUser());
-                    if (goodBadges != null && !goodBadges.isEmpty()) {
-                        mainBadge = goodBadges.stream()
-                                // enum 순서(브론즈 < 실버 < 골드)로 비교할 수 있도록 비교자 지정
-                                .max(Comparator.comparing(b ->
-                                        b.getTier() == null ? 0 :
-                                                switch (b.getTier()) {
-                                                    case bronze -> 1;
-                                                    case silver -> 2;
-                                                    case gold -> 3;
-                                                }
-                                ))
-                                .orElse(null);
-                    }
-                    // - 탈주(나쁜) 배지
-                    AbandonBadgeDto abandonBadge = badgeService.getAbandonBadge(m.getUser());
+
+                    BigDecimal temperature = userReputationRepository.findByUserId(targetId)
+                            .map(UserReputation::getTemperature) // 이미 BigDecimal
+                            .orElse(null);
 
                     SimpleUserDto simple = SimpleUserDto.builder()
                             .userId(targetId)
                             .nickname(m.getUser().getNickname())
                             .profileImageUrl(m.getUser().getProfileImageUrl())
                             .role(m.getRole() == TeamMemberRole.LEADER ? "LEADER" : "MEMBER")
-                            .mainBadge(mainBadge)           // ✅ 채움
-                            .abandonBadge(abandonBadge)     // ✅ 채움
+                            .mainBadge(badgeService.getRepresentativeGoodBadge(m.getUser())) // 대표 착한 배지
+                            .abandonBadge(badgeService.getAbandonBadge(m.getUser()))        // 탈주 배지
+                            .temperature(temperature)
                             .build();
 
                     return EvaluationMemberItem.builder()
                             .memberId(m.getId())
-                            .isMine(isMine)          // 자기 자신은 목록에서 제외했으므로 항상 false
+                            .isMine(isMine)
                             .user(simple)
                             .isEvaluated(evaluated)
                             .scores(myScores)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return EvaluationModalResponse.builder()
                 .teamId(team.getId())
